# le-ultracivic

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  hackathon_demo_patch.py  manual_test_fix.py  package-lock.json  package.json  update_status_values.sql
backend/: .env.example  .env.local.example  .env.test  .pre-commit-config.yaml  CODE_QUALITY.md  ENVIRONMENT_SETUP.md  Makefile  alembic.ini  allowances_available.csv  check_database_state.py  debug_timeout_issue.py  demo_api_patch.py  pyproject.toml  pytest.ini  requirements.txt  simple_db_check.py  simple_test.py  test_db_connection.py  test_reservation_fix.py  test_reservation_system.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_05_1236-fadd94301e16_create_allowances_table.py  2025_07_05_2039-e24cbb1d809e_add_tx_hash_and_reward_tx_hash_fields_.py
backend/app/: config.py  database.py  main.py  minimal_email_test.py  quick_production_test.py  simple_email_test.py  test_email.py  test_history_endpoint.py  test_history_format.py  test_production_readiness.py  test_simple_token_alert.py  working_token_alert.py
backend/app/api/: health.py  retirements.py
backend/app/middleware/: audit.py  cors.py  error_handling.py  rate_limit.py  validation.py
backend/app/models/: __init__.py  allowances.py
backend/app/schemas/: __init__.py  retirements.py
backend/app/services/: alchemy.py  background_manager.py  blockchain.py  cleanup_service.py  email.py  oneinch.py  payment_validator.py  price_service.py  reward_calculator.py  thirdweb.py  transaction_monitor.py
backend/app/utils/: retry.py
backend/scripts/: check.py  format.py  lint.py  seed_allowances.py  seed_database.py
backend/tests/: conftest.py  test_api.py  test_simple.py
currency/: hardhat.config.js  package-lock.json  package.json
currency/artifacts/contracts/PollutionRight.sol/: PollutionRight.dbg.json  PollutionRight.json
currency/cache/: solidity-files-cache.json  validations.json
currency/contracts/: PollutionRight.sol
currency/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
currency/ignition/modules/: PollutionRight.js
frontend/: .gitignore  compare.js  demo_api_client.js  index.html  next.config.ts  package-lock.json  package.json  script.js  styles.css  tailwind.config.js
frontend/lib/: wagmi.ts
frontend/src/app/: ClientWrapper.tsx  fonts.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/api/retirements/: route.ts
frontend/src/components/: Actions.tsx  ButtonSection.tsx  Footer.tsx  FormSection.tsx  Header.tsx  HeroSection.tsx  HistoryTable.tsx  MessageSection.tsx  Modal.tsx  PaymentModal.tsx  ValueProps.tsx  WalletConnection.tsx
frontend/src/components/providers/: Web3Provider.tsx
frontend/src/components/svg/: DoItButton.tsx  Hero1.tsx  Hero2Left.tsx  Hero2Right.tsx  HistoryPrompt.tsx  Title.tsx  ValueProp1Left.tsx  WhatButton.tsx  index.ts
frontend/src/components/ui/: LoadingButton.tsx  LoadingSpinner.tsx  ProgressSteps.tsx
frontend/src/hooks/: useEthPrice.ts  useHistory.ts  usePayment.ts  useReservation.ts  useWalletConnection.ts
frontend/src/lib/: api.ts  blockchain.ts  config.ts  database.ts  wagmi.ts
(+8 files in other folders)
